--- a/supernova/requirements.txt
+++ b/supernova/requirements.txt
@@ -1,6 +1,5 @@
 asgiref==3.8.1
-Django==4.2.7
-django-environ==0.11.2
-pip==23.2.1
+Django==4.2.14
+environ==1.0
 sqlparse==0.5.1
-tzdata==2024.1
+typing_extensions==4.12.2
