--- a/supernova/requirements.txt
+++ b/supernova/requirements.txt
@@ -6,6 +6,8 @@ django-cors-headers==4.4.0
 django-environ==0.11.2
 djangorestframework==3.15.2
 idna==3.7
+pytz==2024.1
 requests==2.32.3
 sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.1
