--- a/supernova/requirements.txt
+++ b/supernova/requirements.txt
@@ -3,6 +3,7 @@ certifi==2024.7.4
 charset-normalizer==3.3.2
 Django==4.2.7
 django-cors-headers==4.4.0
+django-crontab==0.7.1
 django-environ==0.11.2
 djangorestframework==3.15.2
 idna==3.7
@@ -11,3 +12,4 @@ requests==2.32.3
 sqlparse==0.5.1
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.2
